# snap-fetch

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
examples/: mmap_writer.rs
src/: bandwidth_optimizer.rs  main.rs  platform_io.rs
tests/: integration_test.rs
